# master_thesis_quark

./: config.json  makefile  policy.json
qkernel/: Cargo.toml  makefile  x86_64-qkernel.json
qkernel/src/: benchmark.rs  kernel_def.rs  lib.rs  print.rs  shielding_layer.rs
qkernel/src/shield/: cryptographic_utilities.rs  exec_shield.rs  guest_syscall_interceptor.rs  https_attestation_provisioning_cli.rs  inode_tracker.rs  kbs_secret.rs  mod.rs  qkernel_log_magager.rs  secret_injection.rs  sev_guest.rs  software_measurement_manager.rs  sys_attestation_report.rs  terminal_shield.rs
qkernel/src/syscalls/: mod.rs  sys_attestation_report.rs  sys_file.rs  sys_mmap.rs  sys_read.rs  sys_stat.rs  sys_thread.rs  syscalls.rs
qlib/: auxv.rs  benchmark.rs  common.rs  config.rs  control_msg.rs  k8s_policy.rs  k8s_shielding.rs  mod.rs  pagetable.rs  path.rs  shield_policy.rs
qlib/kernel/: Kernel.rs  mod.rs  sev_guest.rs  task.rs
qlib/kernel/boot/: config.rs  controller.rs  fs.rs  loader.rs
qlib/kernel/fs/: dirent.rs  file.rs  inode.rs  inode_overlay.rs  inotify.rs  mod.rs  mount.rs
qlib/kernel/kernel/: abstract_socket_namespace.rs  fd_table.rs  kernel.rs
qlib/kernel/loader/: elf.rs  loader.rs
qlib/kernel/memmgr/: mm.rs  pmamgr.rs  vma.rs
qlib/kernel/quring/: uring_mgr.rs
qlib/kernel/threadmgr/: task_exit.rs
qlib/qmsg/: qcall.rs
qvisor/: Cargo.toml  makefile
qvisor/src/: benchmark.rs  kernel_def.rs  main.rs  policy.rs  qcall.rs  shielding_layer.rs
qvisor/src/shield/: cryptographic_utilities.rs  exec_shield.rs  guest_syscall_interceptor.rs  https_attestation_provisioning_cli.rs  inode_tracker.rs  mod.rs  secret_injection.rs  sev_guest.rs  terminal_shield.rs  (+1 more)
(+30 files in other folders)
