[package]
name = "qkernel"
version = "0.6.0"
authors = ["Yulin Sun <yulin.sun@quarksoft.io>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
bit_field = "0.10.1"
bitflags = "1.2.1"
x86_64 = "0.14.7"
cache-padded = "1.1.1"
spin = "0.9.2"
#xmas-elf = { git = "https://github.com/gz/xmas-elf.git" }
xmas-elf = "0.7.0"
serde = { version = "1.0", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_derive = { version = "1.0.106", default-features = false}
scopeguard = { version = "^1.1.0", default-features = false }
enum_dispatch = { git = "https://github.com/QuarkContainer/enum_dispatch_clone.git" }
aes-gcm-siv = "0.11.1"
getrandom = { version = "0.2", features = ["rdrand"] }
aes-gcm = "0.10.1"
postcard ={ version = "1.0", features = ["alloc"] }
hmac = "0.12.1"
sha2 = { version = "0.10.6", default-features = false,  features = ["force-soft"]}
hex-literal = "0.3.4"
base64ct = { version = "1.5.3",  features = ["alloc"]}
modular-bitfield = "0.11.2"
rand = { version = "0.8.3", features = ["getrandom"], default-features = false }
mbedtls = {git = "https://github.com/fortanix/rust-mbedtls.git", default-features = false, features = ["no_std_deps"] }


[package.metadata.cargo-xbuild]
sysroot_path = "../target/sysroot"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"
debug = 1
lto = true

[profile.release]
panic = "abort"
#opt-level = 0
opt-level = 3
debug = 0
overflow-checks = false
lto = true
codegen-units = 1
debug-assertions = false
